<resources>
    <string name="lottery_tip">4、如果彩票还未兑奖，请遮挡住兑奖密码区域</string>
    <string name="folder_image_count">共%1$d张</string>
    <string name="forecast">发预测</string>
    <string name="freecharge">免费</string>
    <string name="get_lottery_free">免费领彩票</string>
    <string name="get_lottery_issue">福彩3D 第%1$s期领彩票</string>
    <string name="get_money_des">领取旺彩红包可以赚现金，快去抢！</string>
    <string name="get_money_worring">提现金额不低于10元</string>
    <string name="get_tip1">您剩余%1$s张旺彩券,可领%2$s注%3$s第%4$s期彩票。领彩票时间: %6$s, 每期最多领%5$s注。</string>
    <string name="get_tip2">选择号码 [已选%1$s注:%2$s]</string>
    <string name="get_tip3">彩票库还有%1$s组号码，还有%2$s个选择机会</string>
    <string name="get_title">本期已领取%1$s注</string>
    <string name="gif">gif</string>
    <string name="go_right_now">前往允许</string>
    <string name="gold">金币</string>
    <string name="gold_mall">金币商城</string>
    <string name="goodstatus">商品状态</string>
    <string name="has_no_video_source">sorry 暂无本期视频！</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hint_idcard">18位身份身份证号</string>
    <string name="hint_name">真实姓名</string>
    <string name="history_open">历史开奖</string>
    <string name="history_record">历史记录</string>
    <string name="honor_medal">荣誉勋章</string>
    <string name="host_api">api.icaipiao123.com</string>
    <string name="host_api_lb">duoduozhongcp.com</string>
    <string name="host_prediction_mastertest">admin2.icaipiao123.com</string>
    <string name="host_push">push.icaipiao123.com</string>
    <string name="host_s0">s0.icaipiao123.com</string>
    <string name="host_trade">trade.icaipiao123.com</string>
    <string name="host_user">s0.icaipiao123.com</string>
    <string name="id_card">身份证号</string>
    <string name="id_number">身份证号:</string>
    <string name="idcard_alert">*实名验证是旺彩平台用于佣金提现审核，请填写真实的信息，一旦绑定则无法修改</string>
    <string name="idcard_infront">身份证正面</string>
    <string name="idcard_infront_hint">请确保照片身份正面字迹清晰</string>
    <string name="idcard_inhand">手持身份证</string>
    <string name="idcard_inhand_hint">双手手持身份证，能清晰看出身份证头像</string>
    <string name="idcard_reverse">身份证反面</string>
    <string name="idcard_reverse_hint">请确保照片身份背面字迹清晰</string>
    <string name="image_all_photo">所有照片</string>
    <string name="image_cancel">取消</string>
    <string name="image_clip">裁剪</string>
    <string name="image_done">完成</string>
    <string name="image_doodle">涂鸦</string>
    <string name="image_mosaic">马赛克</string>
    <string name="image_mosaic_tip">请直接在图片上涂抹虚化</string>
    <string name="image_original">原图</string>
    <string name="image_preview">预览</string>
    <string name="image_reset">还原</string>
    <string name="image_rotate">旋转</string>
    <string name="image_text">文字</string>
    <string name="image_undo">撤销</string>
    <string name="into_channel">点击进入频道</string>
    <string name="invite_des">"点击分享，好友安装后，输入兑换码 %1$s，你们将分别获得一张优惠券。
好友越多，奖励越多！"</string>
    <string name="invite_for_coin_des">"点击分享，好友安装后，输入兑换码 %1$s，您和好友将分别获得 %2$s 个金币。
好友越多，奖励越多！"</string>
    <string name="issue_text">第%1$s期</string>
    <string name="jiang_chi">奖      池</string>
    <string name="last_success_time">"    最近连中"</string>
    <string name="latest">最近连中</string>
    <string name="latestpreview">最近预览</string>
    <string name="listview_header_hint_normal">下拉刷新</string>
    <string name="listview_header_hint_release">释放加载更多</string>
    <string name="listview_header_last_time">上次更新时间：</string>
    <string name="listview_loading">好运加载中…</string>
    <string name="live_lottery">晒彩票</string>
    <string name="loading">加载中…</string>
    <string name="look_example">查看样例</string>
    <string name="look_past">查看往期</string>
    <string name="lottery_prediction">发动态</string>
    <string name="map_query_type">餐饮服务|购物服务|生活服务|住宿服务|风景名胜|商务住宅|政府机构及社会团体|公司企业|道路附属设施|地名地址信息|公共设施</string>
    <string name="mobile_number">手机号:</string>
    <string name="msg_sms_error">获取验证码出错，请检查手机网络或稍后再试</string>
    <string name="my_channel">我的频道</string>
    <string name="my_coin_des">共获赠%1$s次 获得%2$s个旺彩币</string>
    <string name="my_collection">我的收藏</string>
    <string name="my_coupon_des">"共%1$s张  已使用%2$s张  剩余%3$s张"</string>
    <string name="my_lottery">我的彩票</string>
    <string name="my_qr">我的二维码</string>
    <string name="mybuyrecored">我的购买记录</string>
    <string name="mycollection">我的收藏</string>
    <string name="mypackages">我的套餐</string>
    <string name="myrechargehisthory">我的购买记录</string>
    <string name="n11x5_feedback_qq_hite">"添加好友联系我们QQ:1783331506,此种方式请确保你的手机上安装了最新版手机端QQ
(备注:此种方式速度较慢,建议由微信的彩友优先使用微信)"</string>
    <string name="need">需要</string>
    <string name="need_fit">需要与身份证姓名一致</string>
    <string name="need_submit">为了保证您的钱款不受损失,请确保信息准确</string>
    <string name="net_work_not_connect">请联网后重试</string>
    <string name="next_stab">下一步</string>
    <string name="nickname_invalid">请输入正确的昵称（1到8个字符）</string>
    <string name="no_comment">暂无评论</string>
    <string name="no_data">暂无数据</string>
    <string name="no_name_master">(无名大神)</string>
    <string name="no_network">请联网后重试</string>
    <string name="no_open_qq">无法打开QQ,请先安装QQ.</string>
    <string name="no_open_weixin">无法打开微信,请先安装微信.</string>
    <string name="no_replay">暂无回复</string>
    <string name="no_url">No url</string>
    <string name="nomore_loading">没有更多数据了</string>
    <string name="noopen">未开通</string>
    <string name="not_chose_number">未选号</string>
    <string name="not_selected_number">未选择号码</string>
    <string name="not_take_pictures">未拍照</string>
    <string name="now_update">"立即
升级"</string>
    <string name="number_analyse">号码分析</string>
    <string name="offical_ccounts">每天阅读旺彩预测(wangcaissq)微信公众号的头条文章,找到文末的红包口令并复制。</string>
    <string name="official_accounts">wangcaissq</string>
    <string name="open_camera_permission">请开启照相权限！</string>
    <string name="open_detail">中奖详情</string>
    <string name="open_external_storage_permission">请打开读取设备外部存储空间权限</string>
    <string name="open_location">中奖地区</string>
    <string name="open_pool">奖池</string>
    <string name="open_result">期开奖结果</string>
    <string name="open_wechat_des">打开微信朋友圈，可直接粘贴文字并从手机相册选取图片</string>
    <string name="origin">原图</string>
    <string name="origin_photo">原图(3.07M)</string>
    <string name="origin_size">原图(%1$s)</string>
    <string name="password_invalid">请输入正确的密码（6到16个字符）</string>
    <string name="password_toggle_content_description">Toggle password visibility</string>
    <string name="path_password_eye">M12,4.5C7,4.5 2.73,7.61 1,12c1.73,4.39 6,7.5 11,7.5s9.27,-3.11 11,-7.5c-1.73,-4.39 -6,-7.5 -11,-7.5zM12,17c-2.76,0 -5,-2.24 -5,-5s2.24,-5 5,-5 5,2.24 5,5 -2.24,5 -5,5zM12,9c-1.66,0 -3,1.34 -3,3s1.34,3 3,3 3,-1.34 3,-3 -1.34,-3 -3,-3z</string>
    <string name="path_password_eye_mask_strike_through">M2,4.27 L19.73,22 L22.27,19.46 L4.54,1.73 L4.54,1 L23,1 L23,23 L1,23 L1,4.27 Z</string>
    <string name="path_password_eye_mask_visible">M2,4.27 L2,4.27 L4.54,1.73 L4.54,1.73 L4.54,1 L23,1 L23,23 L1,23 L1,4.27 Z</string>
    <string name="path_password_strike_through">M3.27,4.27 L19.74,20.74</string>
    <string name="person_information">身份信息</string>
    <string name="person_picture">身份证照片</string>
    <string name="phone_invalid">请输入正确的手机号码（11位）</string>
    <string name="photo">相册</string>
    <string name="photo_crop">图片裁剪</string>
    <string name="pickerview_cancel">取消</string>
    <string name="pickerview_day">日</string>
    <string name="pickerview_hours">时</string>
    <string name="pickerview_minutes">分</string>
    <string name="pickerview_month">月</string>
    <string name="pickerview_seconds">秒</string>
    <string name="pickerview_submit">确定</string>
    <string name="pickerview_year">年</string>
    <string name="please_input_search">请输入搜索内容</string>
    <string name="please_selected_ball">选择的号码请至少满足单注要求</string>
    <string name="praise">关注</string>
    <string name="pre_not_success">上期未中</string>
    <string name="pre_success">上期中</string>
    <string name="prediction_title_current">下期预测，未开奖</string>
    <string name="predictionpackage">我的预测</string>
    <string name="preferentialrecharge">优惠充值</string>
    <string name="preview_count">预览(%1$s)</string>
    <string name="preview_image_count">%1$s/%2$s</string>
    <string name="push_toast_off">您将不会再收到【%1$s】开奖通知</string>
    <string name="push_toast_on">【%1$s】开奖时将会及时提醒您</string>
    <string name="qr_not_save">二维码图片还未保存，是否离开？</string>
    <string name="real_name">真实姓名:</string>
    <string name="receive_message">用于短信接收</string>
    <string name="recent_preview">最近预览</string>
    <string name="recent_string">最近连中</string>
    <string name="refresh_done">刷新完成</string>
    <string name="refreshing">好运加载中…</string>
    <string name="replay">Replay</string>
    <string name="resubmit">重新提交</string>
    <string name="run_lottery_list">开奖视频列表</string>
    <string name="run_lottery_time">开奖直播倒计时</string>
    <string name="s1">Save image</string>
    <string name="s2">Allow Ad to store image in Picture gallery?</string>
    <string name="s3">Accept</string>
    <string name="s4">Decline</string>
    <string name="s5">Create calendar event</string>
    <string name="s6">Allow Ad to create a calendar event?</string>
    <string name="save">保存</string>
    <string name="save_error">保存出错了...</string>
    <string name="save_file_no_permisstion">文件保存失败，请开启文件保存权限</string>
    <string name="save_image_success">保存成功,保存图片路径为:手机存储/Images</string>
    <string name="save_qr_and_open_wechat">"保存二维码
并打开微信"</string>
    <string name="scan_click_album">"扫一扫内
点击相册"</string>
    <string name="search">搜索</string>
    <string name="search_menu_title">Search</string>
    <string name="search_what_you_want">搜索专家、文章</string>
    <string name="see">次查看</string>
    <string name="see_open_detail">查看开奖详情</string>
    <string name="select_complete">完成(%1$s/%2$s)</string>
    <string name="select_issue">选期</string>
    <string name="select_limit">最多选择%1$s张图片</string>
    <string name="selection_amount">"  %1$s 注 "</string>
    <string name="selection_date_time">%1$s %2$s</string>
    <string name="selection_fushi_name">%1$s+%2$s</string>
    <string name="selection_has_selected">"已选择%1$s个红球%2$s个蓝球  共%3$s注%4$s元"</string>
    <string name="selection_has_selected_dantuo">"%1$s个红胆%2$s个红拖%3$s个蓝球  共%4$s注%5$s元"</string>
    <string name="selection_has_selected_dantuo_noblue">%1$s个红胆%2$s个红拖</string>
    <string name="selection_has_selected_noblue">"已选择%1$s个红球  共%3$s注"</string>
    <string name="selection_issue_index_des">"第  %1$s 期 "</string>
    <string name="selection_issue_nums_des">"第  %1$s 期 (开奖 %2$s) "</string>
    <string name="selection_time">"购彩截止时间: %2$s
%1$s"</string>
    <string name="selections_has_selected_dantuo_noblue">"%1$s个红胆%2$s个红拖  共%3$s注"</string>
    <string name="sell_money">销售额</string>
    <string name="send">发送</string>
    <string name="settings">设置</string>
    <string name="share_get_coin_des">现在分享本应用给好友，好友兑换您的邀请码后，您和好友将分别获赠旺彩币。您就可以用旺彩币购买预测号了。</string>
    <string name="slogan">2000万用户信赖的彩票平台</string>
    <string name="sms_send">已发送验证码，请注意接收</string>
    <string name="specialist_intro">这个家伙很懒，什么都没留下!</string>
    <string name="ssq_di">第</string>
    <string name="ssq_key">shuangseqiu</string>
    <string name="station_helper">彩站助手</string>
    <string name="station_not_finish">店铺信息不全，海报上无法显示个人信息，点击填写    >></string>
    <string name="station_qq_desc">* 有任何疑问请咨询客服 QQ</string>
    <string name="station_trend">电子走势图</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="submit">提交</string>
    <string name="button_send">发送</string>
    <string name="button_optimize">优化</string>
    <string name="button_knowledge">知识库</string>
    <string name="phone_number">手机号码</string>
    <string name="request_code">请求验证码</string>
    <string name="verification_code">验证码</string>
    <string name="verify">验证</string>
    <string name="recent_results">近期结果</string>
    <string name="predict_button">预测</string>
    <string name="disclaimer">免责声明</string>
</resources>