<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.main.MainActivity"
    tools:parentTag="androidx.constraintlayout.widget.ConstraintLayout">

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#121212"
        android:layerType="hardware" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="24dp"
        android:text="@string/recent_results"
        android:textColor="#FFD700"
        android:textSize="20sp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvResults"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:layerType="hardware"
        android:overScrollMode="never"
        android:clipToPadding="false"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:fastScrollEnabled="true"
        app:fastScrollHorizontalThumbDrawable="@drawable/fast_scroll_thumb"
        app:fastScrollHorizontalTrackDrawable="@drawable/fast_scroll_track"
        app:fastScrollVerticalThumbDrawable="@drawable/fast_scroll_thumb"
        app:fastScrollVerticalTrackDrawable="@drawable/fast_scroll_track" />

    <Button
        android:id="@+id/btnPredict"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/gold"
        android:text="@string/predict_button"
        android:textColor="@color/text_dark" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:text="@string/disclaimer"
        android:textColor="@color/text_disclaimer"
        android:textSize="12sp" />
</merge>